# cmake_permissive_flag_vs16.8

./: CMakeLists.txt  test.cpp
